--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,15 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
-
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/filmweb
-spring.datasource.username=szymon
-spring.datasource.password=szymon
-
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
-
-
 #to avoid lob blob method exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 #default value is embedded which mean it only applies if you're running and embedded database. always is the solution if you're running an external database
 spring.datasource.initialization-mode=always
-
 #App properties
-app.jwtSecret = JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+app.jwtSecret=JWTSuperSecretKey
+app.jwtExpirationInMs=604800000
