--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/filmweb
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://mysql.mikr.us/db_h433
+spring.datasource.username=h433
+spring.datasource.password=D5A3_d2b130
 spring.jpa.hibernate.ddl-auto=create
 #to avoid lob blob method exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
