--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
+
 ## PostgreSQL
-spring.datasource.url=jdbc:mysql://mysql.mikr.us/db_h433
-spring.datasource.username=h433
-spring.datasource.password=D5A3_d2b130
-spring.jpa.hibernate.ddl-auto=create
-#to avoid lob blob method exception
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/filmweb
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create-drop
 #default value is embedded which mean it only applies if you're running and embedded database. always is the solution if you're running an external database
 spring.datasource.initialization-mode=always
+
 #App properties
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
