Development setup improvements and java 11 version bump

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.url=jdbc:postgresql://localhost:5432/filmweb
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #default value is embedded which mean it only applies if you're running and embedded database. always is the solution if you're running an external database
 spring.datasource.initialization-mode=always
 
