Film and actor cache with Redis

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     container_name: filmweb-backend
     depends_on:
       - database
+      - redis-cache
     env_file:
       - ../env/backend.env
-
   database:
     image: 'postgres:13.1-alpine'
     ports:
@@ -23,5 +23,10 @@ services:
       - ../src/main/resources/init.sql:/docker-entrypoint-initdb.d/init.sql
     env_file:
       - ../env/postgres.env
+  redis-cache:
+    image: "redis"
+    ports:
+      - "6379:6379"
+    container_name: filmweb-redis-cache
 volumes:
   filmweb_data:
