Film and actor cache with Redis v2

--- a/env/backend.env
+++ b/env/backend.env
@@ -3,3 +3,4 @@ SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_JPA_HIBERNATE_DDL_AUTO=none
 SPRING_DATASOURCE_INITIALIZATION_MODE=never
+SPRING.REDIS.HOST=redis-cache
