--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.datasource.initialization-mode=always
 #App properties
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
+
+#Redis
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=60000
