--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.datasource.initialization-mode=always
 #App properties
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs=604800000
+swagger.host=localhost:8080
